--- a/index.html
+++ b/index.html
@@ -4,8 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <div class="navbar">
+        <h3>Lisa-Marie Strauß</h3>
+
+        <div class="nav">
+            <p>HOME</p>
+            <p><a href="portfolio.html">Portfolio</a></p>
+        </div>
+    </div>
+
+    <div class="main">
+
+        <div class="hero">
+            <div class="item">
+                <p>Hi, ich bin<br>Lisa-Marie Strauß<br>und mache</p>
+                <h1>Webseiten Design</h1>
+                <h1>& Entwicklung</h1>
+            </div>
+        </div>
+
+        <div class="about">
+            <div class="item">
+
+                <p>Hi! Ich bin Webdesignerin aus Ludwigsburg, am Anfang meiner Karriere. Ich bringe viel Enthusiasmus mit und freue mich darauf, meine bisher erlernten Fähigkeiten in der Praxis anzuwenden und dabei ständig dazuzulernen.
+                <br><br>
+                Meine Stärken liegen im ästhetischen Design, intuitiver Funktionalität und Kreativität. Meine Lernbereitschaft treibt mich an, das Beste aus jedem Projekt herauszuholen.
+                </p>
+                <img src="assets/img/pexels-karolina-grabowska-6633263.jpg">
+            </div>
+            
+            <div class="icon">
+                <img src="assets/icon/blumentopf.png">
+                <img src="assets/icon/hakeln.png">
+                <img src="assets/icon/kamera.png">
+                <img src="assets/icon/kunst.png">
+                <img src="assets/icon/offenes-buch.png">
+                <img src="assets/icon/wandern.png">
+            </div>
+        </div>
+
+        <div class="workflow">
+            <div class="item">
+                <img src="assets/img/Authentic Dallas Cafe.png">
+                <h3>Branding</h3>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="item">
+                <img src="assets/img/Authentic Dallas Cafe.png">
+                <h3>UI/UX Design</h3>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="item">
+                <img src="assets/img/Authentic Dallas Cafe.png">
+                <h3>Coding</h3>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="item">
+                <img src="assets/img/Authentic Dallas Cafe.png">
+                <h3>SEO</h3>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
